saving user data in crud crud
saving data

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     </form>
 
     <ul id="UL"></ul>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.5/axios.min.js"></script>
+    
     <script src="script.js"></script>
 </body>
 </html>
